--- a/Website API/Version 2/templates/quizPage.html
+++ b/Website API/Version 2/templates/quizPage.html
@@ -25,31 +25,35 @@
     <div class="alert alert-info">
         <strong>QUIZ: {{ quizName }}</strong>
     </div>
-    <div class="container rounded" style="padding: 10px; background-color: rgb(240, 240, 240); border-radius: 15px; margin-left:2%; margin-right:2%; width:96%">
+    <div class="container-fluid rounded" style="padding: 10px; background-color: rgb(240, 240, 240); border-radius: 15px; margin-left:2%; margin-right:2%; width:96%; margin-bottom:20px">
         <div class="progress" style="width:80%; margin-right: 10%; margin-left:10%">
-            <div id="countdownBar" class="progress-bar progress-bar-striped progress-bar-animated bg-primary" style="width: 100%"></div>
+            <div id="countdownBar" class="progress-bar progress-bar-striped progress-bar-animated bg-success" style="width: 100%"></div>
         </div>
-        <p style="text-align: center"><strong id="progressLeft">5</strong> seconds remaining!</p>
+        <p style="text-align: center"><strong><span id="progressLeft"></span></strong> seconds remaining!</p>
     </div>
     <script>
         function move(countdownTime) {
             var elem = document.getElementById("countdownBar");
             var width = 100;
-            var prg = document.getElementById("progressLeft")
             var id = setInterval(frame, (countdownTime * 10));
             function frame() {
+                if (width <= 25) {
+                    elem.className = "progress-bar progress-bar-striped progress-bar-animated bg-danger"
+                } else if (width <= 50) {
+                    elem.className = "progress-bar progress-bar-striped progress-bar-animated bg-warning"
+                }
                 if (width <= 1) {
                     clearInterval(id);
                 } else {
                     width--;
                     // document.getElementById("progressLeft").innerText = toString(Math.floor((width/100)*5))
-                    prg.innerText = toString(Math.floor((width / 100) * 5))
+                    document.getElementById("progressLeft").innerHTML = Math.floor((width / 100) * countdownTime+1)
                     elem.style.width = width + '%';
                 }
             }
         }
         // move({{ countdownTime|safe }})
-        move(5)
+        move(10)
     </script>
     <div class="alert alert-warning">
         <h4 class="alert-heading">{{ questionName }}</h4>
@@ -64,9 +68,9 @@
                 </label>
             </div>
             {% endfor %}
-            <script type="text/javascript">
+            <!-- <script type="text/javascript">
                 var wait = setTimeout("document.question.submit();", 5500);
-            </script>
+            </script> -->
         </form>
     </div>
 
