Update Website API/Version 2/templates/quizPage.html

--- a/Website API/Version 2/templates/quizPage.html
+++ b/Website API/Version 2/templates/quizPage.html
@@ -52,8 +52,8 @@
                 }
             }
         }
-        // move({{ countdownTime|safe }})
-        move(10)
+         move({{ countdownTime|safe }})
+        //move(10)
     </script>
     <div class="alert alert-warning">
         <h4 class="alert-heading">{{ questionName }}</h4>
