--- a/Website API/Version 2/templates/quizPage.html
+++ b/Website API/Version 2/templates/quizPage.html
@@ -68,9 +68,9 @@
                 </label>
             </div>
             {% endfor %}
-            <!-- <script type="text/javascript">
-                var wait = setTimeout("document.question.submit();", 5500);
-            </script> -->
+            <script type="text/javascript">
+                var wait = setTimeout("document.question.submit();", {{ countdownTime|safe }} * 1000 + 500);
+            </script>
         </form>
     </div>
 
