Added logout button

--- a/Website API/Version 2/templates/adminPanel.html
+++ b/Website API/Version 2/templates/adminPanel.html
@@ -16,8 +16,9 @@
 </head>
 
 <body>
-    <div class="alert alert-secondary">
+    <div class="alert alert-secondary" role="alert">
         <strong style="font-size: 20px">Charities Day Admin</strong>
+        <a href='/removeAdmin' style="float: right">Logout</a>
     </div>
     <div class="container-fluid rounded" style="padding: 10px; background-color: rgb(240, 240, 240); border-radius: 5px;margin-left:2%; margin-right:2%; width:96%">
         <div class="btn btn-primary" style="padding: 10px; margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px">
