--- a/Website API/Version 2/templates/adminPanel.html
+++ b/Website API/Version 2/templates/adminPanel.html
@@ -30,7 +30,7 @@
             </button>
             <div class="collapse" id="quizzesCollapse">
                 {% for quiz in quizzes %}
-                {% if quiz.quizAvaliable %}
+                {% if quiz.quizAvailable %}
                 <button type="button" data-toggle="collapse" data-target="#{{ quiz.quizName }}" aria-expanded="false"
                     aria-controls="{{ quiz.quizName }}" style="margin-left: 10%; margin-right: 10%; font-size: 15px; width: 80%; margin-bottom:5px"
                     class="{{ loop.cycle('btn btn-outline-primary', 'btn btn-outline-info') }}" name='{{ quiz.quizName }}'>
@@ -75,7 +75,7 @@
             </button>
             <div class="collapse" id="votesCollapse">
                 {% for vote in votes %}
-                {% if vote.voteAvaliable %}
+                {% if vote.voteAvailable %}
                 <button class="{{ loop.cycle('btn btn-outline-primary', 'btn btn-outline-info') }}" type="button"
                     data-toggle="collapse" data-target="#{{ vote.voteName }}" aria-expanded="false" aria-controls="{{ vote.voteName }}"
                     style="margin-left: 10%; margin-right: 10%; font-size: 15px; width: 80%; margin-bottom:5px" name='{{ vote.voteName }}'>
