--- a/Website API/Version 2/templates/yearForm.html
+++ b/Website API/Version 2/templates/yearForm.html
@@ -20,7 +20,7 @@
     <div class="alert alert-info">
         <div style="text-align: center; font-size: 15px">To start, select your year group.</div>
     </div>
-    <div class="container rounded" style="padding: 10px; background-color: rgb(240, 240, 240); border-radius: 15px; margin-left:2%; margin-right:2%; width:96%">
+    <div class="container-fluid rounded" style="padding: 10px; background-color: rgb(240, 240, 240); border-radius: 15px; margin-left:2%; margin-right:2%; width:96%">
 
     <form method="POST" action="/yearForm" style="width: 100%; margin-left: auto; margin-right: auto">
         <div class="form-group">
@@ -66,7 +66,7 @@
     </form>
     </div>
     <hr>
-    <div class="container" style="padding: 20px; background-color: rgb(240, 240, 240); border-radius: 15px; margin-left:2%; margin-right:2%; width:96%">
+    <div class="container-fluid" style="padding: 20px; background-color: rgb(240, 240, 240); border-radius: 15px; margin-left:2%; margin-right:2%; width:96%">
         <h4><strong>What is this?</strong></h4>
         <p>You'll be able to participate in numerous quizzes throughout the day. Plus you can have your say with live voting during stage acts!</p>
         <p>Once you press submit you'll get a unique code which is how your vote is counted. You won't need to remember it.</p>
