Added Multiple Vote

--- a/Website API/Version 2/templates/votePage.html
+++ b/Website API/Version 2/templates/votePage.html
@@ -23,7 +23,7 @@
         <p>Here is your code <strong>{{ code }}</strong> from Year <strong>{{ year }}</strong></p>
     </div> -->
     <div class="alert alert-info">
-        <strong>{{ voteName }} Vote</strong>
+        <strong>{{ voteName }} Event</strong>
     </div>
 
     <div class="alert alert-success">
