--- a/Website API/Version 2/templates/home.html
+++ b/Website API/Version 2/templates/home.html
@@ -46,8 +46,8 @@
     </div>
 
     <div class="container-fluid rounded" style="padding: 10px; background-color: rgb(240, 240, 240); border-radius: 15px; margin-left:2%; margin-right:2%; width:96%">
-        <h4 style="text-align: center">Quiz Events</h4>
-        <p style="text-align: center">5 Credits to enter a quiz.</p>
+        <h4 style="text-align: center">Charity Events</h4>
+        <p style="text-align: center">5 Credits to enter one of these events.</p>
         {% if nocredits == 1 %}
         <div class="alert alert-danger" role="alert">
             <p style="text-align: center"><strong>You have no credits.</strong></p>
@@ -59,43 +59,79 @@
         <div class="alert alert-info" role="alert">
             <p style="text-align: center">You have<strong> {{ credits }} </strong>credits.</p>
             <a href="/redeemCreditCode">
-                <button type="button" style="width: 100%" class="btn btn-outline-primary">Claim more Credits</button>
+                <button type="button" style="width: 100%" class="btn btn-primary">Claim more Credits</button>
             </a>
         </div>
         {% endif %}
-        <form method='POST' action='/getQuiz' style="width: 100%; margin-left: auto; margin-right: auto">
-            {% for quiz in quizzes %}
+        <form method="POST" , action="/getVote" , style="width: 100%; margin-left: auto; margin-right: auto">
+            {% for vote in votes %}
+            {% if vote.cost == 1 %}
             <div>
                 <button style="margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px" class="{{ loop.cycle('btn btn-outline-primary', 'btn btn-outline-info') }}"
-                    name='{{ quiz }}' type='submit' value='{{ quiz }}'>{{ quiz }}</button>
-            </div>
-            {% endfor %}
-            {% if quizzes|length == 0 %}
-            <div style="width:100%">
-                <p style="text-align: center">There are no more quizzes available right now.</p>
+                    name='{{ vote.name }}' type='submit' value='{{ vote.name }}'>{{ vote.name }}
+                    {% if vote.multiple %}
+                    <span class="badge badge-pill badge-light">Multiple Entry</span>
+                    {% else %}
+                    <span class="badge badge-pill badge-light">Single Entry</span>
+                    {% endif %}
+                </button>
             </div>
             {% endif %}
+            {% endfor %}
         </form>
+        <form method='POST' action='/getQuiz' style="width: 100%; margin-left: auto; margin-right: auto">
+            {% for quiz in quizzes %}
+            {% if quiz.cost == 1 %}
+            <div>
+                <button style="margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px" class="{{ loop.cycle('btn btn-outline-primary', 'btn btn-outline-info') }}"
+                    name='{{ quiz.name }}' type='submit' value='{{ quiz.name }}'>{{ quiz.name }}</button>
+            </div>
+            {% endif %}
+            {% endfor %}
+            </form>
+            {% if quizzes|length == 0 and votes|length == 0%}
+            <div style="width:100%">
+                <p style="text-align: center">There are no more events available right now.</p>
+            </div>
+            {% endif %}
     </div>
 
     <hr>
 
     <div class="container-fluid rounded" style="padding: 10px; background-color: rgb(240, 240, 240); border-radius: 15px;margin-left:2%; margin-right:2%; width:96%">
-        <h4 style="text-align: center">Vote Events</h4>
-        <p style="text-align: center">Free to Enter.</p>
+        <h4 style="text-align: center">Free to Enter</h4>
+        <p style="text-align: center">These events are completely free to participate in!</p>
         <form method="POST" , action="/getVote" , style="width: 100%; margin-left: auto; margin-right: auto">
             {% for vote in votes %}
+            {% if vote.cost == 0 %}
             <div>
                 <button style="margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px" class="{{ loop.cycle('btn btn-outline-primary', 'btn btn-outline-info') }}"
-                    name='{{ vote }}' type='submit' value='{{ vote }}'>{{ vote }}</button>
-            </div>
-            {% endfor %}
-            {% if votes|length == 0 %}
-            <div style="width:100%">
-                <p style="text-align: center">There are no more votes running right now.</p>
+                    name='{{ vote.name }}' type='submit' value='{{ vote.name }}'>{{ vote.name }}
+                    {% if vote.multiple %}
+                    <span class="badge badge-pill badge-light">Multiple Entry</span>
+                    {% else %}
+                    <span class="badge badge-pill badge-light">Single Entry</span>
+                    {% endif %}
+                </button>
             </div>
             {% endif %}
+            {% endfor %}
         </form>
+        <form method='POST' action='/getQuiz' style="width: 100%; margin-left: auto; margin-right: auto">
+            {% for quiz in quizzes %}
+            {% if quiz.cost == 0 %}
+            <div>
+                <button style="margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px" class="{{ loop.cycle('btn btn-outline-primary', 'btn btn-outline-info') }}"
+                    name='{{ quiz.name }}' type='submit' value='{{ quiz.name }}'>{{ quiz.name }}</button>
+            </div>
+            {% endif %}
+            {% endfor %}
+        </form>
+            {% if quizzes|length == 0 and votes|length == 0%}
+            <div style="width:100%">
+                <p style="text-align: center">There are no more events available right now.</p>
+            </div>
+            {% endif %}
     </div>
 
     <hr>
