Added Event Refresh

--- a/Website API/Version 2/templates/adminPanel.html
+++ b/Website API/Version 2/templates/adminPanel.html
@@ -21,6 +21,8 @@
         <a href='/removeAdmin' style="float: right">Logout</a>
     </div>
     <div class="container-fluid rounded" style="padding: 10px; background-color: rgb(240, 240, 240); border-radius: 5px;margin-left:2%; margin-right:2%; width:96%">
+        <a href="/updateEvents"><button type="button" class="btn btn-outline-success" style="padding: 10px; margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px">Update all votes and quizzes</button>
+        </a>
         <div class="btn btn-primary" style="padding: 10px; margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px">
             <strong>Users: </strong><span class="badge badge-danger">{{ userCount }}</span>
         </div>
